<resources>
    <string name="app_name">哎呀</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="digits_username">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_</string>
    <string name="loadding">加载中...</string>

</resources>
