<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/aiya"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:digits="@string/digits_username"
            android:maxLength="16"
            android:hint="@string/please_input_username"
            android:textColorHint="@color/lightgreen"
            android:textColor="@color/lightgreen"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/lightgreen"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/please_input_pwd"
            android:textColorHint="@color/lightgreen"
            android:textColor="@color/lightgreen"
            android:background="@android:color/transparent"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:maxLength="16"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/lightgreen"
            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login"
            android:textSize="@dimen/font_size"
            android:background="@drawable/shape_login_btn_bg"
            android:layout_marginTop="40dp"
            android:alpha="0.6"
            />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size"
            android:text="@string/register"
            android:background="@drawable/shape_register_btn_bg"
            android:layout_marginTop="10dp"
            android:alpha="0.6"
            />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:textSize="@dimen/font_smart_size"
            android:textColor="@color/lightgreen"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>

</RelativeLayout>
